	- Fixed AI researching 2035 Helicopters in 2015
	- Fixed Brazil and Vietnam non-MTG ships appearing in production
	- Fixed two corvettes missing class for Philippines
	- Fixed Saudi Panavia Tornado IDS to be the right aircraft
	- Fixed electronics tree missing 2025
	- Fixed Brazil localization BRA_global_aligment
	- Miscellaneous organisation
	- Chile now has also Small Arms 1975

Content:
	- Added initial missile stockpile to ITA
	- Significant updates to the Italian tree and starting political situation
	- Rework of the italian political branch with the introduction of a policy system based on decisions instead of focuses
	- Added several additional generic focus tree (Some small content additions)
	- Restructured Brazil and Vietnam Navy

v1.6.3
AI:
	- Investment AI will no longer offer you projects that exceed 730 days
	- Disabled Anti Bully Decisions for AI (They didn't use it anyways)
	- Armenian/Azerbaijan Hostile Relations added
	- Armenia will try and protect Artaskh
	- Tweaked the ability for the AI to build offices
	- Expanded their desire for industrial strength above all (Should build up longer)
	- Expanded some AI strategies for South Africa to be more domineering over the local African minors
	- Switzerland will protect and befriend it's Alpine Brothers
	- Eritrean AI will now be more cautious against Ethiopian in Ethiopian-Eritrean conflict
	- Fixed some issues with some AI frontlines for RAJ, UKR and CHI
	- Introduced AI Ship Limiter
	- Added "Tick" checks so the AI won't decrease and increase taxes in the same week
	- AI will strike back when nuked
	- On DoW AI will set its nuclear weapons on alert

Bugfixes:
	- Fixed Steam Link leading to outdated steam page
	- Fixed social buttons positioning for all resolutions
	- Fixed Brazilian idea "Crippled Currency" from not always being removed
	- Brazil should no longer support Ukraine via Employment Projects
	- Fixed Ukrainian event not properly displaying localization