@@ -5307,6 +5307,47 @@ generic_coalition_politics_desicions = {
 			hidden_effect = { SLV = { add_political_power = 400 } } #pp to change mil law
 		}
 	}
+	GER_nationalist_claims_LIC = {
+		icon = decision
+
+		cost = 150
+		days_remove = 120
+		fire_only_once = yes
+
+		allowed = { original_tag = GER }
+
+		visible = { has_government = nationalist }
+
+		available = {
+			NOT = {
+				OR = {
+					has_idea = EU_member
+					has_idea = NATO_member
+					has_idea = german_legacy
+				}
+			}
+		}
+
+		complete_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision GER_nationalist_claims_LIC"
+			add_state_core = 947
+			LIC = { set_country_flag = AI_is_threatened }
+			every_neighbor_country = {
+				add_opinion_modifier = { target = PREV modifier = expansionist_agenda }
+			}
+		}
+		remove_effect = {
+			log = "[GetDateText]: [Root.GetName]: Decision remove GER_nationalist_claims_LIC"
+			create_wargoal = {
+				target = LIC
+				type = take_claimed_state
+				generator = {
+					947
+				}
+			}
+			hidden_effect = { LIC = { add_political_power = 400 } } #pp to change mil law
+		}
+	}
 	BRA_nationalist_claims_URG = {
 		icon = decision
 
