@@ -178,6 +178,8 @@
  GER_nationalist_claims_SOV_desc: "The Soviets took unfairly took this part of East Prussia from us after World War 2. [SOV.GetNameWithFlag] should pack up and leave. Isn't most of their people there soldiers anyway?"
  GER_nationalist_claims_SWI: "Claim the German-speaking parts of [SWI.GetNameWithFlag]"
  GER_nationalist_claims_SWI_desc: "The majority of the Swiss are Germans. Those parts should be reunited into [GER.GetNameWithFlag]!"
+ GER_nationalist_claims_LIC: "Claim rightful territory: [LIC.GetNameWithFlag]"
+ GER_nationalist_claims_LIC_desc: "Liechtenstein is a German state. It should be part of [GER.GetNameWithFlag]!"
 
  generic_coalition_politics_desicions: "[Root.GetAdjective] Political Decisions"
  generic_coalition_politics_desicions_desc: "Political Laws:\n\nHas Elections: [has_elections_check]\nElection Threshold: [?election_threshold|%0] [term_limit_text]"
