@@ -178,6 +178,8 @@
  GER_nationalist_claims_SOV_desc: "Les Soviétiques nous ont injustement pris cette partie de la Prusse orientale après la Seconde Guerre mondiale. [SOV.GetNameWithFlag] devrait faire ses bagages et partir. La plupart de leurs habitants ne sont-ils pas des soldats de toute façon ?"
  GER_nationalist_claims_SWI: "Revendiquer les parties germanophones [SWI.GetDuDelaDelNP] [SWI.GetFlag][SWI.GetName]"
  GER_nationalist_claims_SWI_desc: "La majorité des Suisses sont des Allemands. Ces parties devraient être réunies dans [GER.GetNameWithFlag] !"
+ GER_nationalist_claims_LIC: "Revendiquer un territoire légitime : [LIC.GetNameWithFlag]"
+ GER_nationalist_claims_LIC_desc: "Le Liechtenstein est un état allemand. Il doit faire partie [GER.GetNameWithFlag]!"
 
  generic_coalition_politics_desicions: "Décision politiques [ROOT.GetAdjFP]"
  generic_coalition_politics_desicions_desc: "Lois politiques :\n\nA des élections : [has_elections_check]\nSeuil d'élection : [?election_threshold|%0] [term_limit_text]"
