@@ -178,6 +178,8 @@
  GER_nationalist_claims_SOV_desc: "Советы незаслуженно отобрали у нас эту часть Восточной Пруссии после Второй мировой войны. [Сов.GetNameWithFlag] должены собраться и уйти. Разве большинство населения там не солдаты?"
  GER_nationalist_claims_SWI: "Потребовать немецкоязычные части [SWI.GetNameWithFlag]"
  GER_nationalist_claims_SWI_desc: "Большинство швейцарцев - немцы. Эти территории должны быть воссоединены в [GER.GetNameWithFlag]!"
+ GER_nationalist_claims_LIC: "Требование законной территории: [LIC.GetNameWithFlag]"
+ GER_nationalist_claims_LIC_desc: "Лихтенштейн - немецкое государство. Оно должно быть в составе [GER.GetNameWithFlag]!"
 
  generic_coalition_politics_desicions: "[Root.GetAdjective] политические решения"
  generic_coalition_politics_desicions_desc: "Политические законы:\n\nПроводятся выборы: [has_elections_check]\nПорог выборов: [?election_threshold|%0]"
