@@ -23,6 +23,7 @@ Bugfixes:
 	- Chile now has also Small Arms 1975
 
 Content:
+	- Nationalist Germany now can claim Liechtenstein
 	- Added initial missile stockpile to ITA
 	- Significant updates to the Italian tree and starting political situation
 	- Rework of the italian political branch with the introduction of a policy system based on decisions instead of focuses
